--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,6 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Signika+Negative);
+
 body {
   padding-top: 70px;
   padding-bottom: 30px;
+  background-color: #eeebe4;
+  font-family: 'Signika Negative', sans-serif;
 }
 
 .theme-dropdown .dropdown-menu {
@@ -11,4 +15,14 @@ body {
 
 .theme-showcase > p > .btn {
   margin: 5px 0;
+}
+
+
+.navbar-inverse {
+	background-color: #252525;
+	background-image: none;
+}
+
+h1{
+	font-family: 'Signika Negative', sans-serif;
 }
